--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             Download</button>
         </div>
         <div class="col-lg-6 image">
-          <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
+          <img class="title-image" src="iphone6.png" alt="iphone-mockup">
         </div>
 
       </div>
@@ -110,14 +110,14 @@
           <h2 class="testimonial-text">“
             My college roommate and I both would stay up on Tinder, not looking for anything serious (also not looking
             for hookups though, just entertainment). My now husband and I matched on onitin.</h2>
-          <img class="testimonial-image" src="images/zenstu.jpg" alt="dog-profile">
+          <img class="testimonial-image" src="zenstu.jpg" alt="dog-profile">
           <em>Pebbles, New York</em>
         </div>
         <div class="carousel-item">
           <h2 class="testimonial-text">“
             I met my fiancé on onitin during the quarantine for COVID. She is from Lafayette, Indiana and I am from
             Cleveland, Ohio. We are both Christians who fell madly in love.</h2>
-          <img class="testimonial-image" src="images/eren.jpg" alt="lady-profile">
+          <img class="testimonial-image" src="eren.jpg" alt="lady-profile">
           <em>Beverly, Illinois</em>
         </div>
 
@@ -144,10 +144,10 @@
   <!-- Press -->
 
   <section id="press">
-    <img class="press-box" src="images/TechCrunch.png" alt="tc-logo">
-    <img class="press-box" src="images/tnw.png" alt="tnw-logo">
-    <img class="press-box" src="images/bizinsider.png" alt="biz-insider-logo">
-    <img class="press-box" src="images/mashable.png" alt="mashable-logo">
+    <img class="press-box" src="TechCrunch.png" alt="tc-logo">
+    <img class="press-box" src="tnw.png" alt="tnw-logo">
+    <img class="press-box" src="bizinsider.png" alt="biz-insider-logo">
+    <img class="press-box" src="mashable.png" alt="mashable-logo">
 
   </section>
 
